rgw : clean instance string parsed from bilog when deleting null-versionId object in a versioned bucket take datasync

Fixes: https://tracker.ceph.com/issues/47529
Signed-off-by: caolei <halei15848934852@163.com>